--- a/video_faceswap/video_faceswap.ipynb
+++ b/video_faceswap/video_faceswap.ipynb
@@ -9,6 +9,7 @@
    },
    "outputs": [],
    "source": [
+    "!pip install insightface onnxruntime-gpu\n",
     "!mkdir -p ~/.insightface/models/\n",
     "!wget -c https://github.com/facefusion/facefusion-assets/releases/download/models/inswapper_128.onnx -O ~/.insightface/models/inswapper_128.onnx"
    ]
@@ -252,10 +253,10 @@
     "        sim_index, sim_value = facelib0.most_simi(face)\n",
     "        if sim_value > 0.6 and sim_index in swap_map:\n",
     "            img = engine.swapper.get(img, face, swap_map[sim_index][\"face\"], paste_back=True)\n",
+    "         \n",
     "    video_writer.write(img)\n",
     "\n",
     "video_writer.release()\n",
-    "\n",
     "!ffmpeg -i temp.mp4 -i test_video.mp4 -vcodec h264 -y out.mp4\n",
     "display(Video(\"out.mp4\"))"
    ]
@@ -263,9 +264,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_insightface",
+   "display_name": "conda_pytorch_p310",
    "language": "python",
-   "name": "conda_insightface"
+   "name": "conda_pytorch_p310"
   },
   "language_info": {
    "codemirror_mode": {
@@ -277,7 +278,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
