--- a/code_filling/code_filling.ipynb
+++ b/code_filling/code_filling.ipynb
@@ -20,7 +20,7 @@
     "            region_name=\"us-east-1\",\n",
     "        )\n",
     "        self.base_prompts = \"\"\"\n",
-    "You are a professional programmer. Please fill one line code according to <prefix> and <suffix>. Your infill code should be in <middle>\n",
+    "You are a professional programmer. Please fill one line code according to <prefix> and <suffix>. Your infill code should be in <middle>.\n",
     "\n",
     "Here is an example:\n",
     "\n",
@@ -38,12 +38,8 @@
     "Here is the prefix and suffix of the code you need to infill:\n",
     "\n",
     "Human:\n",
-    "<prefix>\n",
-    "{{PREFIX}}\n",
-    "</prefix>\n",
-    "<suffix>\n",
-    "{{SUFFIX}}\n",
-    "</suffix>\n",
+    "<prefix>{{PREFIX}}</prefix>\n",
+    "<suffix>{{SUFFIX}}</suffix>\n",
     "\"\"\"\n",
     "        self.prefill = \"<middle>\"\n",
     "\n",
