add sagemaker byoc

--- a/sagemaker_byoc/deploy_and_test.ipynb
+++ b/sagemaker_byoc/deploy_and_test.ipynb
@@ -1,40 +1,92 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# SageMaker Example"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "!docker build -t sagemaker_byoc_test .\n",
-    "!docker tag sagemaker_byoc_test:latest 236995464743.dkr.ecr.us-west-2.amazonaws.com/sagemaker_byoc_test:latest"
+    "## 1. Create your container repository\n",
+    "\n",
+    "open aws console and create a repository for your container: https://us-west-2.console.aws.amazon.com/ecr/create-repository?region=us-west-2\n",
+    "\n",
+    "for example `236995464743.dkr.ecr.us-west-2.amazonaws.com/sagemaker_byoc_test`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# login\n",
+    "!aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 236995464743.dkr.ecr.us-west-2.amazonaws.com\n",
+    "\n",
+    "container = \"236995464743.dkr.ecr.us-west-2.amazonaws.com/sagemaker_byoc_test:latest\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## 2. Build the container\n",
+    "\n",
+    "demo codes are in `app/`\n",
+    "build and push the docker with following commands:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "!docker build -t sagemaker_byoc_test .\n",
+    "!docker tag sagemaker_byoc_test:latest {container}\n",
+    "!docker push {container}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Deploy on SageMaker\n",
+    "\n",
+    "define the model and deploy on SageMaker\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import boto3\n",
     "import sagemaker\n",
-    "from sagemaker import Model\n",
-    "from sagemaker.multidatamodel import MultiDataModel\n",
-    "from sagemaker.serializers import JSONSerializer\n",
-    "from sagemaker.deserializers import JSONDeserializer"
+    "from sagemaker import Model"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "sess = sagemaker.Session()\n",
@@ -44,24 +96,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "model_name = \"casperhansen/mixtral-instruct-awq\"\n",
-    "s3_code_prefix = f\"large-model-vllm/{model_name}code\"\n",
-    "bucket = sess.default_bucket() "
+    "%%bash\n",
+    "# mymodel will auto download to \"/opt/ml/model/\" in your container\n",
+    "mkdir mymodel\n",
+    "touch mymodel/your_file\n",
+    "tar czvf mymodel.tar.gz mymodel/\n",
+    "rm -rf mymodel"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "container = \"236995464743.dkr.ecr.us-west-2.amazonaws.com/sagemaker_byoc_test:latest\"\n",
+    "s3_code_prefix = f\"sagemaker_byoc_test/mymodel\"\n",
+    "bucket = sess.default_bucket() \n",
+    "code_artifact = sess.upload_data(\"mymodel.tar.gz\", bucket, s3_code_prefix)\n",
+    "print(f\"S3 Code or Model tar ball uploaded to --- > {code_artifact}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "model = Model(\n",
-    "        name=\"your-model-name\",\n",
-    "        model_data=\"s3://sagemaker-us-west-2-236995464743/mymodel.tar.gz\",\n",
+    "        name=\"sagemaker-byoc-test\",\n",
+    "        model_data=code_artifact,\n",
     "        image_uri=container,\n",
     "        role=role,\n",
     "    )"
@@ -70,35 +142,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# 部署模型到endpoint\n",
-    "endpoint_name = sagemaker.utils.name_from_base(f\"-{model_name.replace('/', '-')}\")\n",
+    "endpoint_name = sagemaker.utils.name_from_base(\"sagemaker-byoc-test\")\n",
     "print(f\"endpoint_name: {endpoint_name}\")\n",
     "predictor = model.deploy(\n",
-    "        initial_instance_count=1,\n",
-    "        instance_type='ml.t2.medium',\n",
-    "        endpoint_name=endpoint_name,\n",
-    "    )"
+    "    initial_instance_count=1,\n",
+    "    instance_type='ml.t2.medium',\n",
+    "    endpoint_name=endpoint_name,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Test\n",
+    "\n",
+    "you can invoke your model with SageMaker SDK"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "runtime = boto3.client('runtime.sagemaker')\n",
+    "\n",
     "import json\n",
-    "    \n",
-    "# 测试 /ping\n",
-    "response = runtime.invoke_endpoint(\n",
-    "    EndpointName=endpoint_name,\n",
-    "    ContentType='application/json',\n",
-    "    Body=json.dumps({\"data\": [1, 2, 3]}),\n",
-    "    CustomAttributes='\"{\\\"custom-attributes\\\":\\\"x-amzn-sagemaker-target-variant=AllTraffic,x-amzn-sagemaker-inference-target=/ping\\\"}\"'\n",
-    ")\n",
+    "\n",
     "print(\"Ping response:\", response['Body'].read().decode())\n",
     "\n",
     "# 测试 /invocations\n",
@@ -114,9 +193,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "conda_pytorch_p310",
    "language": "python",
-   "name": "python3"
+   "name": "conda_pytorch_p310"
   },
   "language_info": {
    "codemirror_mode": {
@@ -128,9 +207,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
