--- a/sagemaker_byoc/deploy_async_and_test.ipynb
+++ b/sagemaker_byoc/deploy_async_and_test.ipynb
@@ -54,7 +54,7 @@
    },
    "outputs": [],
    "source": [
-    "!cp app/app_realtime.py app/app.py\n",
+    "!cp app/app_async.py app/app.py\n",
     "!docker build -t sagemaker_byoc_test .\n",
     "!docker tag sagemaker_byoc_test:latest {container}\n",
     "!docker push {container}"
@@ -133,7 +133,7 @@
    "outputs": [],
    "source": [
     "model = Model(\n",
-    "        name=\"sagemaker-byoc-test\",\n",
+    "        name=\"sagemaker-byoc-test-async\",\n",
     "        model_data=code_artifact,\n",
     "        image_uri=container,\n",
     "        role=role,\n",
@@ -148,11 +148,33 @@
    },
    "outputs": [],
    "source": [
+    "from sagemaker.async_inference.async_inference_config import AsyncInferenceConfig\n",
+    "\n",
+    "async_config = AsyncInferenceConfig(\n",
+    "    output_path=f\"s3://{bucket}/async_inference_output\",\n",
+    "    max_concurrent_invocations_per_instance=4,\n",
+    "    # Optionally specify Amazon SNS topics\n",
+    "    # notification_config = {\n",
+    "    # \"SuccessTopic\": \"arn:aws:sns:<aws-region>:<account-id>:<topic-name>\",\n",
+    "    # \"ErrorTopic\": \"arn:aws:sns:<aws-region>:<account-id>:<topic-name>\",\n",
+    "    # }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "# 部署模型到endpoint\n",
-    "endpoint_name = sagemaker.utils.name_from_base(\"sagemaker-byoc-test\")\n",
+    "endpoint_name = sagemaker.utils.name_from_base(\"sagemaker-byoc-test-async\")\n",
     "print(f\"endpoint_name: {endpoint_name}\")\n",
     "predictor = model.deploy(\n",
     "    initial_instance_count=1,\n",
+    "    async_inference_config=async_config,\n",
     "    instance_type='ml.t2.medium',\n",
     "    endpoint_name=endpoint_name,\n",
     ")"
@@ -181,12 +203,47 @@
     "\n",
     "# 测试 /invocations\n",
     "payload = {\"data\": [1, 2, 3, 4, 5]}\n",
-    "response = runtime.invoke_endpoint(\n",
+    " \n",
+    "input_location = sess.upload_string_as_file_body(json.dumps(payload), bucket, \"sagemaker_byoc_test_async_inference/example.json\")\n",
+    "\n",
+    "response = runtime.invoke_endpoint_async(\n",
     "    EndpointName=endpoint_name,\n",
-    "    ContentType='application/json',\n",
-    "    Body=json.dumps(payload)\n",
+    "    InputLocation=input_location,\n",
     ")\n",
-    "print(\"Invocations response:\", response['Body'].read().decode())"
+    "\n",
+    "output_location = response[\"OutputLocation\"]\n",
+    "print(f\"OutputLocation: {output_location}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import urllib, time\n",
+    "from botocore.exceptions import ClientError\n",
+    "\n",
+    "\n",
+    "def get_output(output_location):\n",
+    "    output_url = urllib.parse.urlparse(output_location)\n",
+    "    bucket = output_url.netloc\n",
+    "    key = output_url.path[1:]\n",
+    "    while True:\n",
+    "        try:\n",
+    "            return sess.read_s3_file(bucket=output_url.netloc, key_prefix=output_url.path[1:])\n",
+    "        except ClientError as e:\n",
+    "            if e.response[\"Error\"][\"Code\"] == \"NoSuchKey\":\n",
+    "                print(\"waiting for output...\")\n",
+    "                time.sleep(2)\n",
+    "                continue\n",
+    "            raise\n",
+    "\n",
+    "\n",
+    "output = get_output(output_location)\n",
+    "print(f\"Output: {output}\")"
    ]
   }
  ],
