--- a/sagemaker_vllm/deploy_and_test.ipynb
+++ b/sagemaker_vllm/deploy_and_test.ipynb
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
@@ -437,39 +437,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ", is a simple implementation of a Quick Sort in Python:\n",
+      "Sure, here is a simple implementation of the Quick Sort algorithm in Python:\n",
       "\n",
       "```python\n",
-      "def partition(arr, low, high):\n",
-      "    i = (low-1)\n",
-      "    pivot = arr[high]\n",
-      "\n",
-      "    for j in range(low, high):\n",
-      "        if arr[j] <= pivot:\n",
-      "            i = i+1\n",
-      "            arr[i], arr[j] = arr[j], arr[i]\n",
-      "\n",
-      "    arr[i+1], arr[high] = arr[high], arr[i+1]\n",
-      "    return (i+1)\n",
-      "\n",
-      "def quick_sort(arr, low, high):\n",
-      "    if len(arr) == 1:\n",
+      "def quicksort(arr):\n",
+      "    if len(arr) <= 1:\n",
       "        return arr\n",
-      "    if low < high:\n",
-      "        pi = partition(arr, low, high)\n",
-      "        quick_sort(arr, low, pi-1)\n",
-      "        quick_sort(arr, pi+1, high)\n",
+      "    else:\n",
+      "        pivot = arr[len(arr) // 2]\n",
+      "        left = [x for x in arr if x < pivot]\n",
+      "        middle = [x for x in arr if x == pivot]\n",
+      "        right = [x for x in arr if x > pivot]\n",
+      "        return quicksort(left) + middle + quicksort(right)\n",
       "\n",
-      "# Test the code\n",
-      "arr = [10, 7, 8, 9, 1, 5]\n",
-      "n = len(arr)\n",
-      "quick_sort(arr, 0, n-1)\n",
-      "print(\"Sorted array is:\")\n",
-      "for i in range(n):\n",
-      "    print(\"%d\" % arr[i]),\n",
+      "# Testing the function\n",
+      "print(quicksort([3,6,8,10,1,2,1]))\n",
+      "# Output: [1, 1, 2, 3, 6, 8, 10]\n",
       "```\n",
       "\n",
-      "This code first chooses the last element as the pivot, then it places all elements smaller than the pivot before the pivot and all elements greater than the pivot after it. This is the partition step. The quick_sort function then recursively sorts the elements before and after the pivot.\n"
+      "In this code, we first check if the length of the array is less than or equal to 1, in which case the array is already sorted, so we return it directly. If the array is longer, we choose a pivot element from the middle of the array. We then create three lists: one for elements less than the pivot, one for elements equal to the pivot, and one for elements greater than the pivot. We then recursively sort the elements less than the pivot and those greater than the pivot, and concatenate the results with the elements equal to the pivot.\n"
      ]
     }
    ],
