add build and push scripts

--- a/sagemaker_vllm/deploy_and_test.ipynb
+++ b/sagemaker_vllm/deploy_and_test.ipynb
@@ -17,9 +17,9 @@
    "source": [
     "## 1. Create your container repository\n",
     "\n",
-    "open aws console and create a repository for your container: https://us-west-2.console.aws.amazon.com/ecr/create-repository?region=us-west-2\n",
+    "create a repository for your container (or use aws console and : https://console.aws.amazon.com/ecr/create-repository)\n",
     "\n",
-    "for example `236995464743.dkr.ecr.us-west-2.amazonaws.com/sagemaker_endpoint/vllm`"
+    "for example `sagemaker_endpoint/vllm`"
    ]
   },
   {
@@ -28,26 +28,16 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING! Your password will be stored unencrypted in /home/ec2-user/.docker/config.json.\n",
-      "Configure a credential helper to remove this warning. See\n",
-      "https://docs.docker.com/engine/reference/commandline/login/#credentials-store\n",
-      "\n",
-      "Login Succeeded\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# login\n",
-    "!aws ecr get-login-password --region us-west-2 | docker login --username AWS --password-stdin 236995464743.dkr.ecr.us-west-2.amazonaws.com\n",
-    "\n",
+    "# set some variables\n",
     "VLLM_VERSION = \"v0.6.0\"\n",
-    "REPO_NAME = \"sagemaker_endpoint/vllm\"\n",
-    "CONTAINER = f\"236995464743.dkr.ecr.us-west-2.amazonaws.com/{REPO_NAME}:{VLLM_VERSION}\""
+    "REPO_NAMESPACE = \"sagemaker_endpoint/vllm\"\n",
+    "ACCOUNT = !aws sts get-caller-identity --query Account --output text\n",
+    "REGION = !aws configure get region\n",
+    "ACCOUNT = ACCOUNT[0]\n",
+    "REGION = REGION[0]\n",
+    "CONTAINER = f\"{ACCOUNT}.dkr.ecr.{REGION}.amazonaws.com/{REPO_NAMESPACE}:{VLLM_VERSION}\""
    ]
   },
   {
@@ -71,7 +61,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sending build context to Docker daemon  109.1kB\n",
+      "236995464743.dkr.ecr.us-west-2.amazonaws.com/sagemaker_endpoint/vllm:v0.6.0\n",
+      "WARNING! Your password will be stored unencrypted in /home/ec2-user/.docker/config.json.\n",
+      "Configure a credential helper to remove this warning. See\n",
+      "https://docs.docker.com/engine/reference/commandline/login/#credentials-store\n",
+      "\n",
+      "Login Succeeded\n",
+      "Sending build context to Docker daemon  99.84kB\n",
       "Step 1/9 : ARG VLLM_VERSION\n",
       "Step 2/9 : FROM vllm/vllm-openai:$VLLM_VERSION\n",
       " ---> 714424fc682c\n",
@@ -91,14 +87,14 @@
       " ---> Using cache\n",
       " ---> 2289cd2ab454\n",
       "Step 8/9 : ENTRYPOINT []\n",
-      " ---> Running in 77c791cb60af\n",
-      "Removing intermediate container 77c791cb60af\n",
-      " ---> 0ae7f3fd9829\n",
+      " ---> Running in 94b7a44e7f09\n",
+      "Removing intermediate container 94b7a44e7f09\n",
+      " ---> bb39032928b8\n",
       "Step 9/9 : CMD [\"serve\"]\n",
-      " ---> Running in 7e9b6952dd8b\n",
-      "Removing intermediate container 7e9b6952dd8b\n",
-      " ---> 3ff65f7a99fc\n",
-      "Successfully built 3ff65f7a99fc\n",
+      " ---> Running in e1781b2d5c46\n",
+      "Removing intermediate container e1781b2d5c46\n",
+      " ---> e602e3a36e1d\n",
+      "Successfully built e602e3a36e1d\n",
       "Successfully tagged sagemaker_endpoint/vllm:v0.6.0\n",
       "The push refers to repository [236995464743.dkr.ecr.us-west-2.amazonaws.com/sagemaker_endpoint/vllm]\n",
       "\n",
@@ -116,14 +112,12 @@
       "\u001b[1Bffc45974: Preparing \n",
       "\u001b[1Bf7829cb7: Preparing \n",
       "\u001b[1B869b72ab: Preparing \n",
-      "\u001b[1B8431b412: Layer already exists \u001b[10A\u001b[2K\u001b[9A\u001b[2K\u001b[2A\u001b[2Kv0.6.0: digest: sha256:a9bd50d3401a5801dc455b6e89525a10af64ad074bb9520873288a687eb9c107 size: 3466\n"
+      "\u001b[2B869b72ab: Layer already exists \u001b[10A\u001b[2K\u001b[8A\u001b[2K\u001b[1A\u001b[2Kv0.6.0: digest: sha256:6a9f1e1f5c97dcb653dd69dcbc5189524a78ecd44e6b139c73db303ee835088d size: 3466\n"
      ]
     }
    ],
    "source": [
-    "!docker build --build-arg VLLM_VERSION={VLLM_VERSION} -t {REPO_NAME}:{VLLM_VERSION} .\n",
-    "!docker tag {REPO_NAME}:{VLLM_VERSION} {CONTAINER}\n",
-    "!docker push {CONTAINER}"
+    "!VLLM_VERSION={VLLM_VERSION} REPO_NAMESPACE={REPO_NAMESPACE} ACCOUNT={ACCOUNT} REGION={REGION} bash ./build_and_push.sh"
    ]
   },
   {
