--- a/sagemaker_vllm/deploy_and_test.ipynb
+++ b/sagemaker_vllm/deploy_and_test.ipynb
@@ -15,11 +15,9 @@
     "tags": []
    },
    "source": [
-    "## 1. Create your container repository\n",
+    "## 1. Define some variables\n",
     "\n",
-    "create a repository for your container (or use aws console and : https://console.aws.amazon.com/ecr/create-repository)\n",
-    "\n",
-    "for example `sagemaker_endpoint/vllm`"
+    "The byoc will build and store a vllm endpoint docker image in you ECR private repo (for example `sagemaker_endpoint/vllm`), you need to define the following variables."
    ]
   },
   {
@@ -30,7 +28,6 @@
    },
    "outputs": [],
    "source": [
-    "# set some variables\n",
     "MODEL_ID = \"Qwen/Qwen2.5-0.5B-Instruct\"\n",
     "INSTANCE_TYPE = \"ml.g5.2xlarge\"\n",
     "VLLM_VERSION = \"v0.6.4.post1\"\n",
@@ -54,10 +51,9 @@
    "source": [
     "## 2. Build the container\n",
     "\n",
-    "demo codes are in `app/`\n",
-    "build and push the docker with following commands:\n",
+    "Endpoint starting codes are in `app/`. The script will build and push to ecr. \n",
     "\n",
-    "**the docker only need to be built once**\n"
+    "**The docker only need to be built once**, and after that, when deploying other endpoints, the same docker image can be shared."
    ]
   },
   {
@@ -130,6 +126,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 Download and upload model file\n",
+    "\n",
+    "Firstly, you need to prepare model weights and upload to S3. You can download from HuggingFace, ModelScope or upload your own model. \n",
+    "\n",
+    "If you want vllm to automatically pull the model when it starts, this step can be skipped."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -148,18 +155,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3.2 Download and upload model file"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
    "source": [
-    "##### Option 1: global region"
+    "##### Option 1: Global region (download from HuggingFace)"
    ]
   },
   {
@@ -180,7 +180,7 @@
     "tags": []
    },
    "source": [
-    "##### Option 2: China region"
+    "##### Option 2: China region  (download from ModelScope)"
    ]
   },
   {
@@ -221,7 +221,13 @@
     "tags": []
    },
    "source": [
-    "### 3.3 Prepare vllm start scripts"
+    "### 3.3 Prepare vllm start scripts\n",
+    "\n",
+    "Then you need to a write the vllm starting scripts for endpoint, the container will automatically use the `start.sh` as the entrypont.\n",
+    "\n",
+    "Please carefully modify the startup script file as needed, such as the model running parameter information. All parameters can be referenced at [https://docs.vllm.ai/en/latest/serving/openai_compatible_server.html](https://docs.vllm.ai/en/latest/serving/openai_compatible_server.html)\n",
+    "\n",
+    "Here is a simple script that pulling a model from S3 and starting a vllm server."
    ]
   },
   {
@@ -238,33 +244,25 @@
     "\n",
     "%mkdir -p {local_code_path}\n",
     "\n",
-    "print(\"local_code_path:\", local_code_path)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "print(\"local_code_path:\", local_code_path)\n",
+    "\n",
     "with open(f\"{local_code_path}/start.sh\", \"w\") as f:\n",
     "    f.write(f\"\"\"\n",
     "#!/bin/bash\n",
     "\n",
-    "# port needs to be $SAGEMAKER_BIND_TO_PORT\n",
-    "\n",
     "# download model to local\n",
     "aws s3 sync {s3_model_path} /opt/ml/modelfile/\n",
     "\n",
+    "\n",
     "# the start script need to be adjust as you needed\n",
+    "# port needs to be $SAGEMAKER_BIND_TO_PORT\n",
+    "\n",
     "python3 -m vllm.entrypoints.openai.api_server \\\\\n",
     "    --port $SAGEMAKER_BIND_TO_PORT \\\\\n",
     "    --trust-remote-code \\\\\n",
     "    --max-model-len 4096 \\\\\n",
     "    --model /opt/ml/modelfile/\n",
-    "    \"\"\")"
+    "\"\"\")"
    ]
   },
   {
@@ -287,7 +285,7 @@
     "tags": []
    },
    "source": [
-    "### 3.3 Deploy model"
+    "### 3.3 Deploy endpoint on SageMaker"
    ]
   },
   {
@@ -298,6 +296,10 @@
    },
    "outputs": [],
    "source": [
+    "# Step 0. create model\n",
+    "\n",
+    "# endpoint_model_name already defined in above step\n",
+    "\n",
     "create_model_response = sagemaker_client.create_model(\n",
     "    ModelName=endpoint_model_name,\n",
     "    ExecutionRoleArn=role,\n",
@@ -319,6 +321,8 @@
    },
    "outputs": [],
    "source": [
+    "# Step 1. create endpoint config\n",
+    "\n",
     "endpoint_config_name = sagemaker.utils.name_from_base(model_name, short=True)\n",
     "\n",
     "endpoint_config_response = sagemaker_client.create_endpoint_config(\n",
@@ -334,7 +338,6 @@
     "        },\n",
     "    ],\n",
     ")\n",
-    "\n",
     "print(endpoint_config_response)\n",
     "print(\"endpoint_config_name:\", endpoint_config_name)"
    ]
@@ -348,6 +351,8 @@
    },
    "outputs": [],
    "source": [
+    "# Step 2. create endpoint\n",
+    "\n",
     "endpoint_name = sagemaker.utils.name_from_base(model_name, short=True)\n",
     "\n",
     "create_endpoint_response = sagemaker_client.create_endpoint(\n",
@@ -370,7 +375,7 @@
    "source": [
     "## 4. Test\n",
     "\n",
-    "you can invoke your model with SageMaker SDK"
+    "You can invoke your model with SageMaker runtime."
    ]
   },
   {
@@ -458,7 +463,8 @@
     "            print(data[\"choices\"][0][\"delta\"][\"content\"], end=\"\")\n",
     "        except (json.JSONDecodeError, KeyError, IndexError) as e:\n",
     "            pass\n",
-    "    buffer = buffer[last_idx:]"
+    "    buffer = buffer[last_idx:]\n",
+    "print()"
    ]
   },
   {
@@ -535,7 +541,8 @@
     "            print(data[\"choices\"][0][\"text\"], end=\"\")\n",
     "        except (json.JSONDecodeError, KeyError, IndexError) as e:\n",
     "            pass\n",
-    "    buffer = buffer[last_idx:]"
+    "    buffer = buffer[last_idx:]\n",
+    "print()"
    ]
   }
  ],
