--- a/sagemaker_vllm/deploy_and_test.ipynb
+++ b/sagemaker_vllm/deploy_and_test.ipynb
@@ -356,17 +356,17 @@
     "endpoint_name = sagemaker.utils.name_from_base(model_name, short=True)\n",
     "\n",
     "create_endpoint_response = sagemaker_client.create_endpoint(\n",
-    "    EndpointName=endpoint_name, EndpointConfigName=endpoint_model_name\n",
+    "    EndpointName=endpoint_name, EndpointConfigName=endpoint_config_name\n",
     ")\n",
     "print(create_endpoint_response)\n",
-    "print(\"endpoint_config_name:\", endpoint_config_name)\n",
+    "print(\"endpoint_config_name:\", endpoint_name)\n",
     "while 1:\n",
     "    status = sagemaker_client.describe_endpoint(EndpointName=endpoint_name)[\"EndpointStatus\"]\n",
     "    if status != \"Creating\":\n",
     "        break\n",
     "    print(datetime.now().strftime('%Y%m%d-%H:%M:%S') + \" status: \" + status)\n",
     "    time.sleep(60)\n",
-    "print(\"Endpoint created:\", endpoint_config_name)"
+    "print(\"Endpoint created:\", endpoint_name)"
    ]
   },
   {
