replace aws cli with s5cmd

--- a/sagemaker_vllm/deploy_and_test.ipynb
+++ b/sagemaker_vllm/deploy_and_test.ipynb
@@ -28,7 +28,7 @@
    },
    "outputs": [],
    "source": [
-    "MODEL_ID = \"Qwen/Qwen2.5-0.5B-Instruct\"\n",
+    "MODEL_ID = \"Qwen/Qwen2-VL-7B-Instruct-AWQ\"\n",
     "INSTANCE_TYPE = \"ml.g5.2xlarge\"\n",
     "VLLM_VERSION = \"v0.6.4.post1\"\n",
     "REPO_NAMESPACE = \"sagemaker_endpoint/vllm\"\n",
@@ -251,7 +251,7 @@
     "#!/bin/bash\n",
     "\n",
     "# download model to local\n",
-    "aws s3 sync {s3_model_path} /opt/ml/modelfile/\n",
+    "s5cmd sync {s3_model_path}/* /opt/ml/modelfile/\n",
     "\n",
     "\n",
     "# the start script need to be adjust as you needed\n",
@@ -260,7 +260,6 @@
     "python3 -m vllm.entrypoints.openai.api_server \\\\\n",
     "    --port $SAGEMAKER_BIND_TO_PORT \\\\\n",
     "    --trust-remote-code \\\\\n",
-    "    --max-model-len 4096 \\\\\n",
     "    --model /opt/ml/modelfile/\n",
     "\"\"\")"
    ]
