--- a/sagemaker_vllm/deploy_and_test.ipynb
+++ b/sagemaker_vllm/deploy_and_test.ipynb
@@ -37,7 +37,7 @@
     "ACCOUNT = ACCOUNT[0]\n",
     "REGION = REGION[0]\n",
     "if REGION.startswith(\"cn\"):\n",
-    "    # a repo port from vllm/vllm-openai\n",
+    "    # this is a example repo port from vllm/vllm-openai, you can create your own docker image in your global region account\n",
     "    VLLM_REPO = \"public.ecr.aws/y0a9p9k0/vllm/vllm-openai\"\n",
     "    CONTAINER = f\"{ACCOUNT}.dkr.ecr.{REGION}.amazonaws.com.cn/{REPO_NAMESPACE}:{VLLM_VERSION}\"\n",
     "else:\n",
