update sagemaker vllm

--- a/sagemaker_vllm/deploy_and_test.ipynb
+++ b/sagemaker_vllm/deploy_and_test.ipynb
@@ -28,9 +28,10 @@
    },
    "outputs": [],
    "source": [
-    "MODEL_ID = \"Qwen/Qwen2-VL-7B-Instruct-AWQ\"\n",
-    "INSTANCE_TYPE = \"ml.g5.2xlarge\"\n",
-    "VLLM_VERSION = \"v0.6.4.post1\"\n",
+    "MODEL_ID = \"deepseek-ai/DeepSeek-R1-Distill-Llama-70B\"\n",
+    "INSTANCE_TYPE = \"ml.g6e.12xlarge\"\n",
+    "# better to work with vllm>=v0.7.2\n",
+    "VLLM_VERSION = \"v0.7.2\"\n",
     "REPO_NAMESPACE = \"sagemaker_endpoint/vllm\"\n",
     "ACCOUNT = !aws sts get-caller-identity --query Account --output text\n",
     "REGION = !aws configure get region\n",
@@ -65,7 +66,7 @@
    },
    "outputs": [],
    "source": [
-    "cmd = f\"VLLM_REPO={VLLM_REPO} VLLM_VERSION={VLLM_VERSION} REPO_NAMESPACE={REPO_NAMESPACE} ACCOUNT={ACCOUNT} REGION={REGION} bash ./build_and_push.sh\"\n",
+    "cmd = f\"VLLM_REPO={VLLM_REPO} VLLM_VERSION={VLLM_VERSION} REPO_NAMESPACE={REPO_NAMESPACE} ACCOUNT={ACCOUNT} REGION={REGION} bash ./build_and_push.sh \"\n",
     "print(\"Runging:\", cmd)\n",
     "!{cmd}"
    ]
@@ -145,7 +146,7 @@
    "outputs": [],
    "source": [
     "model_name = MODEL_ID.replace(\"/\", \"-\").replace(\".\", \"-\")\n",
-    "local_model_path = os.environ['HOME'] + \"/models/\" + model_name\n",
+    "local_model_path = \"./models/\" + model_name\n",
     "s3_model_path = f\"s3://{default_bucket}/models/\" + model_name\n",
     "\n",
     "%mkdir -p code {local_model_path}\n",
@@ -171,7 +172,7 @@
    },
    "outputs": [],
    "source": [
-    "# !huggingface-cli download --resume-download {MODEL_ID} --local-dir {local_model_path}"
+    "!huggingface-cli download --resume-download {MODEL_ID} --local-dir {local_model_path} --max-workers 32"
    ]
   },
   {
@@ -192,7 +193,7 @@
    },
    "outputs": [],
    "source": [
-    "!modelscope download --local_dir {local_model_path} {MODEL_ID} "
+    "# !modelscope download --local_dir {local_model_path} {MODEL_ID} "
    ]
   },
   {
@@ -211,7 +212,7 @@
    },
    "outputs": [],
    "source": [
-    "!aws s3 sync {local_model_path} {s3_model_path}\n",
+    "!s5cmd sync --concurrency 32 {local_model_path}/ {s3_model_path}/\n",
     "print(\"s3_model_path:\", s3_model_path)"
    ]
   },
@@ -251,7 +252,8 @@
     "#!/bin/bash\n",
     "\n",
     "# download model to local\n",
-    "s5cmd sync {s3_model_path}/* /opt/ml/modelfile/\n",
+    "s5cmd sync --concurrency 64 \\\n",
+    "    {s3_model_path}/* /temp/model_weight\n",
     "\n",
     "\n",
     "# the start script need to be adjust as you needed\n",
@@ -260,7 +262,9 @@
     "python3 -m vllm.entrypoints.openai.api_server \\\\\n",
     "    --port $SAGEMAKER_BIND_TO_PORT \\\\\n",
     "    --trust-remote-code \\\\\n",
-    "    --model /opt/ml/modelfile/\n",
+    "    --tensor-parallel-size 4 --max-model-len 65536 --enforce-eager \\\\\n",
+    "    --served-model-name {MODEL_ID} \\\\\n",
+    "    --model /temp/model_weight\n",
     "\"\"\")"
    ]
   },
@@ -386,9 +390,11 @@
    "outputs": [],
    "source": [
     "messages = [{\n",
-    "        \"role\": \"user\",\n",
-    "        \"content\": \"Write a quick sort in python\"\n",
-    "}]"
+    "    \"role\": \"user\",\n",
+    "    \"content\": \"Hi, who are you!\"\n",
+    "}]\n",
+    "\n",
+    "max_tokens = 4096"
    ]
   },
   {
@@ -409,8 +415,9 @@
     "sagemaker_runtime = boto3.client('runtime.sagemaker')\n",
     "\n",
     "payload = {\n",
+    "    \"model\": MODEL_ID,\n",
     "    \"messages\": messages,\n",
-    "    \"max_tokens\": 1024,\n",
+    "    \"max_tokens\": max_tokens,\n",
     "    \"stream\": False\n",
     "}\n",
     "response = sagemaker_runtime.invoke_endpoint(\n",
@@ -440,8 +447,9 @@
    "outputs": [],
    "source": [
     "payload = {\n",
+    "    \"model\": MODEL_ID,\n",
     "    \"messages\": messages,\n",
-    "    \"max_tokens\": 1024,\n",
+    "    \"max_tokens\": max_tokens,\n",
     "    \"stream\": True\n",
     "}\n",
     "\n",
@@ -487,8 +495,9 @@
     "prompt = tokenizer.apply_chat_template(messages, add_generation_prompt=True, tokenize=False)\n",
     "\n",
     "payload = {\n",
+    "    \"model\": MODEL_ID,\n",
     "    \"prompt\": prompt,\n",
-    "    \"max_tokens\": 1024,\n",
+    "    \"max_tokens\": max_tokens,\n",
     "    \"stream\": False\n",
     "}\n",
     "\n",
@@ -517,8 +526,9 @@
    "outputs": [],
    "source": [
     "payload = {\n",
+    "    \"model\": MODEL_ID,\n",
     "    \"prompt\": prompt,\n",
-    "    \"max_tokens\": 1024,\n",
+    "    \"max_tokens\": max_tokens,\n",
     "    \"stream\": True\n",
     "}\n",
     "\n",
@@ -542,6 +552,117 @@
     "            pass\n",
     "    buffer = buffer[last_idx:]\n",
     "print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.5 Speed test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "好，用户让我帮他写一首七言律诗介绍上海。首先，我得理解七言律诗的结构，通常是八句，每句七个字，讲究平仄和对仗。然后，我要考虑上海的主要景观和象征，比如黄浦江、东方明珠、外滩等，这些都是上海的标志性景点。\n",
+      "\n",
+      "接下来，我需要把这些元素融入诗中，同时保持语言的优美和韵律感。第一句可以从黄浦江开始，描述它的壮阔。第二句可以引入外滩，表现出历史与现代的结合。第三、四句可以描绘江上的景象，比如船只和灯光，增加动态感。\n",
+      "\n",
+      "后面几句可以转向城市的繁华，比如金融中心和新天地，展示上海的多样性。最后两句要有一个总结，表达对上海的赞美和留恋。赏析部分需要解释诗中的意象和表达的情感，让读者更好地理解诗的内涵。\n",
+      "\n",
+      "在写赏析时，要注意用词准确，突出诗中的亮点，比如对比手法和意象的运用。同时，要保持语言流畅，避免过于生硬。整体上，诗和赏析要相辅相成，共同展现上海的魅力。\n",
+      "</think>\n",
+      "\n",
+      "《七律·沪上》\n",
+      "黄浦江头壮阔波，\n",
+      "外滩古色接天罗。\n",
+      "十里长街车水马，\n",
+      "万家灯火竹木桥。\n",
+      "金融才显峰峦险，\n",
+      "新天地开世界雕。\n",
+      "欲识沪城千面貌，\n",
+      "不离东珠一日遥。\n",
+      "\n",
+      "赏析：这首作品以黄浦江、外滩等为背景，描绘了上海的繁华与壮阔。通过“十里长街车水马，万家灯火竹木桥”的描绘，生动展现了上海的都市景象。诗中“金融才显峰峦险，新天地开世界雕”的运用，对比手法巧妙，突出了上海的现代与传统。尾联则以东珠为引，表达了对上海的深深眷恋与赞美。{'id': 'chatcmpl-0c709e734ae3450c8f69d8a4736be233', 'object': 'chat.completion.chunk', 'created': 1739512712, 'model': 'deepseek-ai/DeepSeek-R1-Distill-Llama-70B', 'choices': [], 'usage': {'prompt_tokens': 16, 'total_tokens': 534, 'completion_tokens': 518}}\n",
+      "\n",
+      "==================================================\n",
+      "Input_tokens 16 Output_tokens 518\n",
+      "First token latency 0.0737 seconds\n",
+      "Output speed 18.3 tokens/seconds\n",
+      "==================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoTokenizer\n",
+    "\n",
+    "sagemaker_runtime = boto3.client('runtime.sagemaker')\n",
+    "\n",
+    "messages = [{\n",
+    "    \"role\": \"user\",\n",
+    "    \"content\": \"帮我写一首七言律诗介绍上海\"\n",
+    "}]\n",
+    "\n",
+    "payload = {\n",
+    "    \"model\": MODEL_ID,\n",
+    "    \"messages\": messages,\n",
+    "    \"max_tokens\": 4096,\n",
+    "    \"temperature\": 0.0,\n",
+    "    \"stream\": True,\n",
+    "    \"stream_options\": {\"include_usage\": True},\n",
+    "}\n",
+    "\n",
+    "response = sagemaker_runtime.invoke_endpoint_with_response_stream(\n",
+    "    EndpointName=endpoint_name,\n",
+    "    ContentType='application/json',\n",
+    "    Body=json.dumps(payload)\n",
+    ")\n",
+    "\n",
+    "buffer = \"\"\n",
+    "time_start = time.time()\n",
+    "first_token_latency = 0\n",
+    "output = []\n",
+    "for t in response['Body']:\n",
+    "    buffer += t[\"PayloadPart\"][\"Bytes\"].decode()\n",
+    "    last_idx = 0\n",
+    "    for match in re.finditer(r'^data:\\s*(.+?)(\\n\\n)', buffer):\n",
+    "        try:\n",
+    "            chunk = json.loads(match.group(1).strip())\n",
+    "            last_idx = match.span()[1]\n",
+    "            # print(chunk)\n",
+    "            if \"usage\" in chunk:\n",
+    "                print(chunk)\n",
+    "                input_tokens = chunk[\"usage\"][\"prompt_tokens\"]\n",
+    "                output_tokens = chunk[\"usage\"][\"completion_tokens\"]\n",
+    "            if \"choices\" in data and chunk[\"choices\"][0][\"delta\"][\"content\"]:\n",
+    "                if first_token_latency == 0:\n",
+    "                    first_token_latency = time.time() - time_start\n",
+    "                output.append(chunk[\"choices\"][0][\"delta\"][\"content\"])\n",
+    "                print(output[-1], end=\"\", flush=True)\n",
+    "                \n",
+    "            \n",
+    "\n",
+    "\n",
+    "        except (json.JSONDecodeError, KeyError, IndexError) as e:\n",
+    "            pass\n",
+    "    buffer = buffer[last_idx:]\n",
+    "\n",
+    "\n",
+    "total_time = time.time() - time_start\n",
+    "\n",
+    "print(\"\\n\" + \"=\" * 50)\n",
+    "print(\"Input_tokens\", input_tokens, \"Output_tokens\", output_tokens)\n",
+    "print(f\"First token latency {first_token_latency:.3} seconds\")\n",
+    "print(f\"Output speed {output_tokens/(total_time-first_token_latency):.3} tokens/seconds\")\n",
+    "print(\"=\" * 50)"
    ]
   }
  ],
